# chocolate-milk

./: Dockerfile  README.md  builder.py  fuzz.py  main.py  pyproject.toml  reproduce.py  showmap.py
Magma/: .gitignore  Dockerfile  aggregate_fuzzing_results.py  analyze_fuzzers.py  base_ids  compute_avg_diffs.py  compute_avg_diffs_singlebug.py  count_bug_reached.py  deploy_afl_fuzzing.sh  deploy_magma_fuzzing.sh  experiment_mapping.csv  plot_single_bug_survival_times.py  plot_survival_times.py  run_afl_fuzzing.sh  run_experiment.sh  survival_times  visualize_fuzzing_results.py  vuln_harness_mapping.csv
aijon/dependencies/clang_indexer/: Dockerfile.builder  Dockerfile.invscov  Dockerfile.runner  aflpp.diff  aflpp_12_25.diff  aflpp_new.diff  compile  precompile_shellphish_aijon  pyproject.toml
aijon/dependencies/clang_indexer/clang_indexer/: .gitignore  __init__.py  clang_indexer.py  indexer.py
aijon/dependencies/clang_indexer/clang_indexer/src/clang_indexer/: clang_indexer.py
aijon/dependencies/project_utils/: pyproject.toml
aijon/dependencies/project_utils/project_utils/: function_resolver.py
aijon/dependencies/project_utils/project_utils/models/: __init__.py  coverage.py  indexer.py  oss_fuzz.py  symbols.py  target.py
experiments/: .gitignore  magma_experiment_mapping.csv
figure_scripts/: bug_trial_heatmap.py  count_monitor_freq.py  usage.md
tests/: test_analysis_container.sh  test_arvo_container.sh  test_container.sh  test_oss_fuzz_container.sh
tools/: analyze_annotations.sh  analyze_crashes.sh  analyze_ossfuzz_annotations.sh  analyze_ossfuzz_coverage.sh  analyze_ossfuzz_crashes.sh  asan_analyzer.py  calculate_annotation_score.py  compare_coverage.sh  compare_trial_results.py  count_crashes.sh  gen_callgraph.py  gen_callgraph_angr.py  gen_coverage_report.sh  parse_cov_report.py  print_magma_history_tree.py  run_arvo_experiment.sh  run_default_ossfuzz.sh  run_experiment.sh  run_magma_experiment.sh  runner.sh  (+1 more)
(+283 files in other folders)
