[project]
name = "project_utils"
version = "0.0.1"
description = "Library for dealing with OSS Fuzz projects"
requires-python = ">=3.10"
dependencies = [
    "jq",
    "pydantic",
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["project_utils"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F"]
extend-select = ["E501"]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.31.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.4",
]

[tool.uv]
package = true
